<resources>
    <string name="app_name">OWND Wallet</string>
    <string name="title_certificate">証明書</string>
    <string name="title_recipient">提供先</string>
    <string name="title_reader">読み取り</string>
    <string name="title_settings">設定</string>
    <string name="title_confirmation">発行</string>
    <string name="title_issuer_detail">発行機関情報</string>
    <string name="title_add_certification">証明書追加</string>
    <string name="description_for_img_add_certificate">証明書を追加</string>
    <string name="button_auth_description">認証ボタン</string>
    <string name="button_issue_description">発行ボタン</string>
    <string name="logo_credential_description">証明書表示用ロゴ</string>
    <string name="logo_issuer_description">発行機関ロゴ</string>
    <string name="logo_verifier_description">検証者ロゴ</string>
    <string name="chevron_right_description">Single Right Chevron</string>
    <string name="chevron_left_description">Single Left Chevron</string>
    <string name="title_activity_test_fragment">TestFragmentActivity</string>
    <string name="sharing_destination_info">提供先情報</string>
    <string name="text_url">URL</string>
    <string name="id_token_sharing_title">%sの登録に必要な情報を提供します</string>
    <string name="id_token_sharing_sharing_info">%sに提供する情報</string>
    <string name="id_token_sharing_pairwise_id_description">提供先がアナタを識別するために必要なIDです。%s用に個別のIDを作成します。</string>
    <string name="id_token_sharing_pairwise_id">利用者ID（#%s）</string>
    <string name="biometric_prompt_title">生体認証</string>
    <string name="biometric_prompt_sub_title">アプリにアクセスするには認証が必要です</string>
    <string name="cancel">キャンセル</string>
    <string name="close">閉じる</string>
    <string name="select_credential">証明書を選択</string>
    <string name="sharing_button">情報を提供する</string>
    <string name="signed_in">サインインしました</string>
    <string name="error_occurred">エラーが発生しました</string>
    <string name="text_qrcode_scanner">QRコードをスキャンしてください</string>
    <string name="text_qrcode_cancel">キャンセル</string>
    <string name="text_domain">ドメイン</string>
    <string name="text_cancel">キャンセル</string>
    <string name="text_pin_code">認証コード</string>
    <string name="text_input_pin_code">認証コードを入力</string>
    <string name="text_request_input_pin_code">証明書発行機関から取得した認証コードを入力してください。</string>
    <string name="text_location">所在地</string>
    <string name="text_contact_address">連絡先</string>
    <string name="text_country_name">国名</string>
    <string name="text_terms_of_service">利用規約</string>
    <string name="text_privacy_policy">プライバシーポリシー</string>
    <string name="text_account_info">アカウント情報</string>
    <string name="link_text_backup">バックアップ</string>
    <string name="link_text_delete">すべての情報を消去</string>
    <string name="text_related_apps">関連アプリ</string>
    <string name="link_text_owned_messenger">OWND Messenger</string>
    <string name="text_about">このアプリについて</string>
    <string name="text_version">バージョン</string>
    <string name="link_text_terms_of_use">利用規約</string>
    <string name="link_text_privacy_policy">プライバシーポリシー</string>
    <string name="link_text_inquiry">お問い合わせ</string>
    <string name="link_text_license">ライセンス</string>
    <string name="version_text">v.%s</string>
    <string name="verified_by_format">verified by %1$s</string>
    <string name="location_format">%1$s %2$s %3$s</string>
    <string name="not_sharing_claims">提供しない情報</string>
    <string name="do_change"><u>変更する</u></string>
    <string name="selected_credential_info">%sで証明します</string>
    <string name="no_credential_is_selected">証明書が選択されていません</string>
    <string name="sharing_claim_sut_title">%sの利用者として適格であると確認するために必要です。%sに登録された証明書を使って証明します</string>
    <string name="sharing_credential_done">情報を提供しました</string>
    <string name="sharing_credential_done_support_text">デスクトップアプリまたはパソコン等のブラウザを確認してください</string>
    <string name="show_qrcode">QRコードを表示する</string>
    <string name="description_credential_qr_code">Credential QR Code</string>
    <string name="qrcode_description">このQRコードには、この証明書の内容のすべてが含まれています。提示する際には、ご注意ください。</string>
    <string name="text_history_title">この証明書を使用した情報提供履歴</string>
    <string name="text_no_history">提供履歴はありません。</string>
    <string name="text_qrcode_generate_error">この証明書はQRコードを生成できません</string>
    <string name="confirmed_credential">有効な証明書です</string>
    <string name="invalid_credential_message">証明書ではないか、期限が過ぎている等の可能性があります。別の証明書をご用意いただくか、証明書を再発行してください。</string>
    <string name="credential_verification_result">読み取り結果</string>
    <string name="my_number_card">マイナンバーカード</string>
    <string name="other_credentials">その他の証明書</string>
    <string name="walkthrough_4_title">早速はじめましょう</string>
    <string name="walkthrough_4_sub_title">新しく証明書を追加して開始することができます</string>
    <string name="walkthrough4_link_sub_text">証明書の発行・提供で取り扱う個人情報は、発行・提供時に確認および同意を行います。</string>
    <string name="privacy_policy_link">&lt;u&gt;プライバシーポリシー&lt;/u&gt;</string>
    <string name="term_of_use_link">&lt;u&gt;利用規約&lt;/u&gt;</string>
    <string name="start_app_newly">新しくはじめる</string>
    <string name="issue">発行する</string>
    <string name="create_backup_file">バックアップファイルを作成</string>
    <string name="backup_button_description">保存する場所を選択してファックアップファイルを生成します</string>
    <string name="create_backup_file_description">OWND Walletに保存された証明書や情報提供履歴等のバックアップファイルを作成します。作成されたファイルを読み込むことでデバイスの変更時にも復元が可能です。</string>
    <string name="last_backup_date">最終ファイル作成日</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restore_title">バックアップファイル読み込み</string>
    <string name="load_backup_file">読み込む</string>
    <string name="select_backup_file_button_description">バックアップファイルを選択します</string>
    <string name="select_backup_file">ファイルを選択</string>
    <string name="load_backup_file_button_description">バックアップファイルを読み込みリストアを実行します</string>
    <string name="backup_file_image">選択したバックアップファイルのイメージ</string>
    <string name="no_file_selected">ファイルが選択されていません</string>
    <string name="restore_from_backup">&lt;u&gt;バックアップからはじめる&lt;/u&gt;</string>
    <string name="restored_data">データを復元しました</string>
    <string name="select_invalid_backup_file">選択したファイルはバックアップファイルではありません</string>
    <string name="saved_backup_file">バックアップが完了しました</string>
    <string name="last_provided_date_header">最終情報提供日 ：</string>
    <string name="organization_info_header">組織情報</string>
    <string name="shared_info_history_header">情報提供履歴</string>
    <string name="number_of_claims">全%s項目</string>
    <string name="claim_recipient">%s に提示した情報</string>
    <string name="timing_of_claim_sharing">%sの情報提供</string>

</resources>