<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.backup.RestoreFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore_title"
        android:layout_marginTop="64dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/not_selected_file_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        >

        <LinearLayout
            android:id="@+id/brown_background_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/warnBackground"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/sharing_claim_sub_title">

            <ImageView
                android:id="@+id/question_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:src="@drawable/ic_question" />

            <TextView
                android:id="@+id/un_selected_credential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/no_file_selected"
                android:textColor="@color/status_warning" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_file_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/filledButtonBackgroundColor"
            android:contentDescription="@string/select_backup_file_button_description"
            android:padding="16dp"
            android:text="@string/select_backup_file"
            android:textColor="@color/filledButtonTextColor"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selected_file_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/not_selected_file_state"
        android:visibility="gone"
        >

        <ImageView
            android:id="@+id/selected_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/backup_file_image"
            android:src="@drawable/description"
            />

        <TextView
            android:id="@+id/selected_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/restore_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/filledButtonBackgroundColor"
            android:contentDescription="@string/load_backup_file_button_description"
            android:padding="16dp"
            android:text="@string/load_backup_file"
            android:textColor="@color/filledButtonTextColor"
            app:cornerRadius="8dp"
            />

        <TextView
            android:id="@+id/do_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_change"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>