<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <FrameLayout
        android:id="@+id/progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/filledBackground"
        android:visibility="gone"
        >
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/confirmation_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/confirmation_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/confirmed_credential"
            android:src="@drawable/ic_check" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="有効な証明書です"
            android:textColor="@color/status_success" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/invalid_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/error_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/confirmed_credential"
            android:src="@drawable/ic_question" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="無効な証明書です"
            android:textColor="@color/status_warning" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmation_box"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="証明書の読み取り内容を表示しています"
            android:textAppearance="@style/text_label_m" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/invalid_credential"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmation_box"
        android:layout_marginTop="128dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_for_img_add_certificate"
            android:src="@drawable/invalid_credential" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/invalid_credential_message"
            android:textAppearance="@style/text_label_m" />
    </LinearLayout>
</RelativeLayout>
